@@ -2077,7 +2077,9 @@ PKG_LIBS = $(SHLIB_OPENMP_CFLAGS)
 
 @noindent
 as the C compiler will be used to link the package code (and there is no
-guarantee that this will work everywhere).
+guarantee that this will work everywhere).  (This does not apply to
+Fortran 9x code, where @code{SHLIB_OPENMP_FCFLAGS} should be used in
+both @code{PKG_FCFLAGS} and @code{PKG_LIBS}.)
 
 For portability, any C/C++ code using the @code{omp_*} functions should
 include the @file{omp.h} header: some compilers (but not all) include it
@@ -3364,13 +3366,13 @@ package.) For files where this line is not needed (e.g. chapters
 included within the body of a larger document, or non-Sweave
 vignettes), the encoding may be declared using a comment like
 @example
-%!\VignetteEncoding@{UTF-8@}
+%\VignetteEncoding@{UTF-8@}
 @end example
 @noindent
 If the encoding is UTF-8, this can also be declared using
 the declaration
 @example
-%!\SweaveUTF8
+%\SweaveUTF8
 @end example
 @noindent
 If no declaration is given in the vignette, it will be assumed to be
